--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments :: head">
-</head>
+<head th:replace="fragments :: head"></head>
 <body>
-
 <div th:replace="fragments :: page-header"></div>
 
 <div class="container body-content">
+    <div>
 
-    <!-- // TODO #2 - display the job fields, one per row -->
+        <table>
+            <tr>
+                <th>Name</th>
+                <td th:text="${singleJob.name}"></td>
+            </tr>
+            <tr>
+                <th>Employer</th>
+                <td th:text="${singleJob.employer}"></td>
+            </tr>
+            <tr>
+                <th>Position Type</th>
+                <td th:text="${singleJob.positionType}"></td>
+            </tr>
+            <tr>
+                <th>Location</th>
+                <td th:text="${singleJob.location}"></td>
+            </tr>
+            <tr>
+                <th>Skill</th>
+                <td th:text="${singleJob.coreCompetency}"></td>
+            </tr>
+        </table>
 
+    </div>
 </div>
-
 </body>
 </html>
