--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -8,6 +8,9 @@
 
 <div class="container body-content">
 
+    <!--<form th:object="${jobForm}" method="post" modelAttribute="job">
+    -->
+
     <form th:object="${jobForm}" method="post">
 
         <div class="form-group">
@@ -22,6 +25,33 @@
                 <option th:each="employer : *{employers}"
                         th:value="${employer.id}"
                         th:text="${employer.value}"></option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label th:for="locationId">Location</label>
+            <select th:field="*{locationId}">
+                <option th:each="location : *{locations}"
+                        th:value="${location.id}"
+                        th:text="${location.value}"></option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label th:for="coreCompetencyId">Skill</label>
+            <select th:field="*{coreCompetencyId}">
+                <option th:each="coreCompetency : *{coreCompetencies}"
+                        th:value="${coreCompetency.id}"
+                        th:text="${coreCompetency.value}"></option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label th:for="positionTypeId">Position Type</label>
+            <select th:field="*{positionTypeId}">
+                <option th:each="positionType : *{positionTypes}"
+                        th:value="${positionType.id}"
+                        th:text="${positionType.value}"></option>
             </select>
         </div>
 
